Se cargan avances del tema 1

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,13 +2,20 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    width: 104px
+    top: 60%
+    left: 0%
   &-2
-    animation: float1 2.8s ease-in-out infinite alternate
+    animation: float3 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 78%
+    right: 15%
+  &-3
+    animation: float2 2.8s ease-in-out infinite alternate
+    position: absolute
+    width: 100px
+    top: 10%
+    right: 10%
 
 
 @keyframes float1
@@ -17,3 +24,170 @@
 
   100%
     transform: translateY(0px)
+
+@keyframes float2
+  0%
+    transform: translateY(0px)
+
+  100%
+    transform: translateY(20px)
+
+@keyframes float3
+  0%
+    transform: translateX(20px)
+
+  100%
+    transform: translateX(0px)
+
+@keyframes rotate2
+  0%
+    transform: rotate(0)
+
+  100%
+    transform: rotate(360deg)
+@keyframes rotate1
+  0%
+    transform: rotate(360deg)
+
+  100%
+    transform: rotate(0deg)
+
+.m-n
+  margin: 0 -3rem
+
+.titulo-principal.color-acento-contenido .titulo-principal__numero span
+  color: $white
+
+.bg-fee0e7
+  background: #FEE0E7
+
+.bg-gradient-ff-e9
+  background: linear-gradient(to bottom, #FFFFFF, #E9E2FF)
+  margin-left: -48px
+  margin-right: -48px
+  padding-left: 48px
+  padding-right: 48px
+
+.bg-full
+  margin-left: -48px
+  margin-right: -48px
+  padding-left: 48px
+  padding-right: 48px
+
+.bg-CCBCFE
+  background: #CCBCFE
+
+.rounded-20
+  border-radius: 20px
+
+.bg-fff
+  background: #FFF
+
+.bg-fbfaff
+  background: #FBFAFF
+
+.bg-e9e2ff
+  background: #E9E2FF
+
+.bg-d9f6ff
+  background: #D9F6FF
+
+.bg-fee0e7, .tabs-a__tab
+  background: #FEE0E7
+
+.bg-fdb6c7
+  background: #FDB6C7
+
+.bg-ffebf0
+  background: #FFEBF0
+
+.bg-DDE6FE
+  background: #DDE6FE
+
+.bg-d3dfff
+  background: rgba(211,223,255,.92)
+
+.bg-gray
+  background: $color-sistema-g !important
+
+.lista-ul--separador
+  li
+    display: flex !important
+    &::before
+      position: relative
+      margin-right: 8px
+      font-size: 1.4rem
+
+.lista-ul
+  li
+    display: flex !important
+    &::before
+      position: relative
+      margin-right: 7px
+      font-size: 1.4rem
+
+.lista-ul--color
+  li
+    display: flex !important
+    &::before
+      position: relative
+      margin-right: 7px
+      font-size: 1.4rem
+
+.lista-ol--cuadro
+  li
+    display: flex !important
+    &::before
+      position: relative
+      margin-right: 7px
+      font-size: 1.4rem
+
+
+.lista-ul li>i:first-of-type,
+.lista-ul--separador li>i:first-of-type,
+.lista-ul--color li>i:first-of-type
+  top: 7px
+
+.texto-acento-contenido
+  color: $color-acento-contenido !important
+
+.tarjeta-avatar-b__img
+  min-width: 16%
+.tarjeta-avatar-b .tarjeta
+  padding-left: 5%
+.tarjeta-avatar-b > img, .tarjeta-avatar-b__img > img
+  max-width: 91px
+  max-height: 91px
+
+.bg-slyde-gradiente
+  background-image: url(../assets/curso/fondos/fondo1.png)
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  margin-left: -48px
+  margin-right: -48px
+  padding-inline: 48px
+  padding-top: 24px
+  padding-bottom: 24px
+
+.bg-slyde-gradiente-2
+  background-image: url(../assets/curso/fondos/fondo2.png)
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  margin-left: -48px
+  margin-right: -48px
+  padding-inline: 48px
+  padding-top: 24px
+  padding-bottom: 24px
+
+.bg-slyde-gradiente-3
+  background-image: url(../assets/curso/fondos/fondo3.png)
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  margin-left: -48px
+  margin-right: -48px
+  padding-inline: 48px
+  padding-top: 24px
+  padding-bottom: 24px
