--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,7 +1,7 @@
 // -----------------------------------------------------
 // COLORES ---------------------------------------------
 // -----------------------------------------------------
-  
+
 // Colores genericos -----------------------------------
 
 $black: #000
@@ -54,12 +54,12 @@ $color-institucional: #39A900
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
-$color-adicional-1: #CDDC39
-$color-adicional-2: #00BCD4
+$color-primario: #1e5af9
+$color-secundario: #01c3fd
+$color-acento-contenido: #6e40fc
+$color-acento-botones: #f9305f
+$color-adicional-1: #e3eef2
+$color-adicional-2: #f2f9fc
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -75,7 +75,7 @@ $color-link-hover: darken($color-sistema-texto, 25%)
 
 // Color Botones ---------------------------------------
 $color-btn-fondo: $color-acento-botones
-$color-btn-texto: $color-sistema-texto
+$color-btn-texto: $white
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $color-primario
@@ -182,7 +182,7 @@ $bp-max-xs: 576px
 // COMPONENTES -----------------------------------------
 // -----------------------------------------------------
 .actividad
-  background-color: #F2F2F2  
+  background-color: #F2F2F2
 // Imágen banner principal -----------------------------
 $banner-principal-img-y: '' // 'arriba','abajo',''
 $banner-principal-img-x: '' // 'derecha',''
