se finaliza tema1

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -191,3 +191,7 @@
   padding-inline: 48px
   padding-top: 24px
   padding-bottom: 24px
+
+
+.tarjeta.color-primario-claro
+  background: rgba(30,90,249,.8)
