se finaliza maquetación, pendiente actividad didáctica

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -107,6 +107,9 @@
 .bg-d3dfff
   background: rgba(211,223,255,.92)
 
+.bg-gray-light
+  background: #F6F6F6
+
 .bg-gray
   background: $color-sistema-g !important
 
@@ -195,3 +198,14 @@
 
 .tarjeta.color-primario-claro
   background: rgba(30,90,249,.8)
+
+.codigo
+  font-size: 1.2rem
+  font-weight: 700
+  background: $color-primario
+  color: white
+  padding: .3rem
+  margin-bottom: .1rem
+
+.rounded-10
+  border-radius: 10px
